# cc-lsp-now

./: .gitignore  .mcp.json  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
docs/: agent-bus.md  agent-tool-roadmap.md  broker.md  csharp-dapper-fixture.md  harness-capability-matrix.md  lsp-grep.md  lsp-path.md  render-memory.md  rendering.md  tool-surface.md
plugins/hsp/: .mcp.json
src/cc_lsp_now/: __init__.py  agent_bus.py  agent_log.py  alias_coordinator.py  broker.py  broker_client.py  broker_lsp.py  broker_session.py  bus_event.py  bus_journal.py  bus_log.py  bus_presence.py  bus_registry.py  candidate.py  candidate_kind.py  cli.py  file_watcher.py  lsp.py  pending_buffer.py  (+4 more)
tests/: test_agent_bus.py  test_agent_bus_contract.py  test_alias_coordinator.py  test_broker.py  test_broker_bus.py  test_broker_lsp.py  test_broker_protocol.py  test_broker_session.py  test_broker_socket_path.py  test_broker_status.py  test_bus_event.py  test_bus_journal.py  test_bus_log.py  test_cli_log.py  test_csharp_dapper_integration.py  test_line_position.py  test_lsp_calls.py  test_lsp_fix.py  test_lsp_grep.py  test_lsp_log.py  test_lsp_move.py  test_lsp_outline.py  test_lsp_path.py  test_lsp_refs.py  test_lsp_session.py  test_lsp_types.py  test_path_finder.py  test_pending_book.py  test_pending_buffer.py  test_profiles.py  test_render_memory.py  test_rendering.py  test_router.py  test_tool_surface.py  test_workgroup.py  test_workspace_edit.py
tmp/: pylance_probe.py  roundtrip.py
(+18 files in other folders)
