[project]
name = "cc-lsp-now"
version = "0.13.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nuck", email = "teoxysoft@gmail.com" }
]
requires-python = ">=3.11"
dependencies = ["mcp>=1.0.0", "watchdog>=3.0.0"]

[project.scripts]
# Per-language aliases exist so each Claude Code plugin using this bridge
# invokes a visibly-distinct command — Claude Code dedupes MCP servers by
# command string and won't run two plugins that share one.
cc-lsp-now = "cc_lsp_now:main"
cc-lsp-now-ty = "cc_lsp_now:main"
cc-lsp-now-csharp = "cc_lsp_now:main"
cc-lsp-now-redirect-hook = "cc_lsp_now.redirect_hook:main"
cc-lsp-now-redirect-hook-ty = "cc_lsp_now.redirect_hook:main"
cc-lsp-now-redirect-hook-csharp = "cc_lsp_now.redirect_hook:main"
cc-lsp-now-broker = "cc_lsp_now.broker:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
